<resources>
    <string name="app_name">Alok NITC e-Magazine</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Alok Pandey</string>
    <string name="nav_header_subtitle">alokpandey181@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="myProfile">My Profile</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_postArticles">Post Articles</string>
    <string name="menu_myArticles">My Articles</string>
    <string name="floatingactionbutton">FloatingActionButton</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="post_articles">Post Articles</string>
    <string name="my_articles">My Articles</string>
    <string name="articles">Articles</string>
    <string name="authentication">Authentication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
